--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>회원가입 페이지</title>
 </head>
 <body>
-    
+    <form>
+        아이디 : <input type="text">
+        비밀번호 : <input type="text">
+    </form>
 </body>
 </html>
