--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,9 +8,10 @@
   </head>
   <body>
     <h1>회원가입 사이트 구현</h1>
-    <form action="/login" method="POST">
+    <form action="/" method="POST">
       <div><label>아이디</label><input type="text" name="id" /></div>
       <div><label>비밀번호</label><input type="password" name="pw" /></div>
+      <button type="submit">로그인</button>
     </form>
     <ul>
       <li><a href="">아이디찾기</a></li>
